force-app/main/default/objects/ssot__Visit__dlm/fields/ssot__ActualVisitStartTime__c.field-meta.xml
<CustomField>
    <fullName>ssot__ActualVisitStartTime__c</fullName>
    <label>Actual Visit Start Time</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ActualVisitStartTime</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>