force-app/main/default/objects/ssot__Visit__dlm/fields/ssot__DurationUOMId__c.field-meta.xml
<CustomField>
    <fullName>ssot__DurationUOMId__c</fullName>
    <label>Duration Unit of Measure</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>DurationUOMId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>