force-app/main/default/objects/ssot__Visit__dlm/fields/ssot__PlannedVisitEndTime__c.field-meta.xml
<CustomField>
    <fullName>ssot__PlannedVisitEndTime__c</fullName>
    <label>Planned Visit End Time</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PlannedVisitEndTime</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>