force-app/main/default/objects/ssot__Visit__dlm/fields/ssot__StatusReasonText__c.field-meta.xml
<CustomField>
    <fullName>ssot__StatusReasonText__c</fullName>
    <label>Status Reason</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>StatusReasonText</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>