force-app/main/default/objects/ssot__Visit__dlm/fields/ssot__VisitorRecordId__c.field-meta.xml
<CustomField>
    <fullName>ssot__VisitorRecordId__c</fullName>
    <label>Visitor Record</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>VisitorRecordId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>