force-app/main/default/objects/ssot__Visit__dlm/fields/ssot__VisitorRecordObject__c.field-meta.xml
<CustomField>
    <fullName>ssot__VisitorRecordObject__c</fullName>
    <label>Visitor Record Object</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>VisitorRecordObject</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>